[project]
name = "odoo-bringout-oca-purchase-workflow-purchase_sale_link_by_origin"
version = "16.0.0"
description = "Purchase/Sale: link by origin - Link PO/SO by the PO's Origin in addition to the default behavior that only links them by their lines"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-purchase-workflow-sale_purchase_stock>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["purchase_sale_link_by_origin"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
