[project]
name = "odoo-bringout-oca-sale-workflow-sale_order_product_assortment"
version = "16.0.0"
description = "Sale Order Product Assortment - Module that allows to use the assortments on sale orders"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ocb-sale>=16.0.0",
    "odoo-bringout-oca-sale-workflow-product_assortment>=16.0.0",
    "odoo-bringout-oca-sale-workflow-base_view_inheritance_extension>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sale_order_product_assortment"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
