[project]
name = "odoo-bringout-oca-sale-workflow-sale_order_product_recommendation_packaging_default"
version = "16.0.0"
description = "Sale Order Product Recommendation with Default Packaging - Quickly add recommended products to sale order by packagings"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-sale-workflow-sale_order_product_recommendation>=16.0.0",
    "odoo-bringout-oca-sale-workflow-sale_packaging_default>=16.0.0",
    "odoo-bringout-oca-sale-workflow-web_widget_numeric_step>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sale_order_product_recommendation_packaging_default"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
